--- a/practicing with flask/templates/login.html
+++ b/practicing with flask/templates/login.html
@@ -45,6 +45,9 @@
             </div>
             <br>
             <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">🔒</span>
+                </div>
                 <input type="password" class="form-control" placeholder="Password" aria-label="Password"
                        aria-describedby="basic-addon" value="{{
               request.form.password }}">
