developed home page just for time being + ease of home access

--- a/practicing with flask/templates/login.html
+++ b/practicing with flask/templates/login.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Playing about with bootstrap</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <style>
@@ -30,7 +31,7 @@
 
 <body>
 <div class="container-fluid h-90 bg-dark text-light">
-  <div class="row h-75 justify-content-center align-items-center">
+  <div class="row h-90 justify-content-center align-items-center">
       <div class="col-5"></div>
     <div class="col-md-2 text-center">
         <h1>Please login</h1>
@@ -39,12 +40,15 @@
         <form action="" method="post">
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1">@</span>
+                    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                 </div>
                 <input type="text" class="form-control" placeholder="Username" aria-label="Username"
                        aria-describedby="basic-addon1" name="username">
             </div>
             <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                </div>
                 <input type="password" class="form-control" placeholder="Password" aria-label="Password"
                        aria-describedby="basic-addon" name="password">
             </div>
