--- a/practicing with flask/templates/home.html
+++ b/practicing with flask/templates/home.html
@@ -34,7 +34,7 @@
         <div class="col-lg-1 text-center"></div>
         <div class="col-lg-3 text-left">
             <h1>
-                A Software-as-a-Service means of distrubuting your project
+                A Software-as-a-Service means of distributing your project
                 <p><h5><small class="text-muted">By Tom • Demo Version</small></h5></p>
             </h1>
         </div>
