added animation to the home page xd

--- a/practicing with flask/templates/home.html
+++ b/practicing with flask/templates/home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <style>
     body,html{
         height:100%;
@@ -30,21 +31,23 @@
 </head>
 <body>
 <div class="container-fluid h-100 bg-dark text-light">
-    <div class="row h-90 justify-content-center align-items-center">
+    <div class="row h-100 justify-content-center align-items-center">
         <div class="col-lg-1 text-center"></div>
         <div class="col-lg-3 text-left">
+
             <h1>
                 A Software-as-a-Service means of distributing your project
                 <p><h5><small class="text-muted">By Tom • Demo Version</small></h5></p>
             </h1>
         </div>
-        <div class="col-lg-2 text-center"></div>
+        <div class="col-lg-2"></div>
         <div class="col-lg-6">
             <p>New or exisiting user?</p>
-            <a href="/login" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Login</a>
+            <a href="/login" class="btn btn-primary btn-lg active animate__animated animate__tada animate__delay-2s" role="button" aria-pressed="true" >Login</a>
             or
             <a href="/signup" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Sign-up</a>
         </div>
     </div>
+</div>
 </body>
 </html>
