added second pannel

--- a/practicing with flask/templates/home.html
+++ b/practicing with flask/templates/home.html
@@ -26,11 +26,17 @@
     .h-10{
         height:10%;
     }
+    .h-95{
+        height:95%;
+    }
+    .h-05{
+        height:5%;
+    }
 
     </style>
 </head>
 <body>
-<div class="container-fluid h-100 bg-dark text-light">
+<div class="container-fluid h-95 bg-dark text-light">
     <div class="row h-100 justify-content-center align-items-center">
         <div class="col-lg-1 text-center"></div>
         <div class="col-lg-3 text-left">
@@ -46,6 +52,22 @@
             <a href="/login" class="btn btn-primary btn-lg active animate__animated animate__tada animate__delay-2s" role="button" aria-pressed="true" >Login</a>
             or
             <a href="/signup" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Sign-up</a>
+        </div>
+    </div>
+</div>
+<div class="container-fluid h-05 bg-dark text-light ">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4 text-center align-bottom">
+            <small class="text-muted">or scroll down</small>
+        </div>
+        <div class="col-4"></div>
+    </div>
+</div>
+<div class="container-fluid h-100 bg-light text-dark ">
+    <div class="row">
+        <div class="col">
+            test
         </div>
     </div>
 </div>
