--- a/practicing with flask/templates/signup.html
+++ b/practicing with flask/templates/signup.html
@@ -30,6 +30,7 @@
 </head>
 
 <body>
+
 <div class="container-fluid h-90 bg-dark text-light">
   <div class="row h-90 justify-content-center align-items-center">
       <div class="col-5"></div>
@@ -70,7 +71,7 @@
         </form>
         <br>
         {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
+        <p class="error text-danger"><strong>Error:</strong> {{ error }}
             {% endif %}
     </div>
     </form>
