added first name and surname part

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -43,6 +43,13 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                 </div>
+                <input type="text" class="form-control" placeholder="Full name" aria-label="name"
+                       aria-describedby="basic-addon1" name="name">
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                </div>
                 <input type="text" class="form-control" placeholder="Username" aria-label="Username"
                        aria-describedby="basic-addon1" name="username">
             </div>
