--- a/templates/signup.html
+++ b/templates/signup.html
@@ -74,7 +74,7 @@
                 <input type="password" class="form-control" placeholder="Confirm Password" aria-label="Confirm Password"
                        aria-describedby="basic-addon" name="confirmpassword">
             </div>
-            <input class="btn btn-default" type="submit" value="Login">
+            <input class="btn btn-default" type="submit" value="Create Account">
         </form>
         <br>
         {% if error %}
