added login, logout, sign up and session support <3

--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -53,4 +53,11 @@
     </div>
 </div>
 </body>
+<script>
+   function myFunction() {
+   location.replace("http://127.0.0.1:5000/login")
+   }
+
+   setTimeout(function(){ myFunction(); }, 3000);
+</script>
 </html>
