--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
+    <title>Dashboard: {{ current_user.id }}</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
     <style>
     body,html{
         height:100%;
@@ -26,23 +27,46 @@
     .h-10{
         height:10%;
     }
+
     </style>
 </head>
 
-<body onload="relayUserTime('{{ current_user.id }}')">
+<body onload="relayUserTime('{{ current_user.fname }}')">
 <div class="container-fluid h-90 bg-dark text-dark">
-  <div class="row h-90 justify-content-center align-items-center">
-      <div class="col-3"></div>
-    <div class="col-md-6 text-center">
-        <div class="card">
-            <div class="card-body">
-            <h3 class="card-title" id="time"></h3>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
+    <div class="row h-90 justify-content-center align-items-center">
+        <div class="col-3"></div>
+        <div class="col-md-6 text-left">
+            <div class="card">
+                <div class="card-body">
+                    <br>
+                    <h2 class="card-title" id="time"></h2>
+                    <p class="card-body text-muted">email: {{ current_user.email }}</p>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Special title treatment</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Special title treatment</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="col-3"></div>
     </div>
-      <div class="col-3"></div>
-  </div>
 </div>
 <div class="container-fluid h-10 bg-dark text-light ">
     <div class="row">
@@ -65,5 +89,6 @@ function relayUserTime(user){
         document.getElementById("time").innerHTML = "Good evening " + user + " !" ;
     }
 }
+
 </script>
 </html>
