presentation related changes

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -46,19 +46,18 @@
                     <div class="col-sm-6">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">asdasdasdas</h5>
+                                <p class="card-text">asdasdasd</p>
+                                <a href="#" class="btn btn-primary">asdasdasd</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">asdasdasd</h5>
+                                <p class="card-text">asdasdasd</p>
+                                <a href="#" class="btn btn-primary">nionionoin</a>
                             </div>
                         </div>
                     </div>
