development of license key definitions! might need file reshuffle

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -53,7 +53,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">No license currently bound</h5>
                                 <div class="card-text">
-                                    <form>
+                                    <form action="" method="post">
                                         <input type="text" class="form-control" id="licensekey" placeholder="License Key">
                                         <button type="submit" class="btn btn-primary mt-2">Bind to this account</button>
                                     </form>
