more license handling

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -41,7 +41,7 @@
                 <div class="card-body">
                     email: {{ current_user.email }}
                         <br>
-                    license d9812h9b192pb9sbd
+                    license: {{ current_user.license}}
                 </div>
                 <div class="row mt-2">
                     <div class="col-sm-1"></div>
@@ -65,8 +65,9 @@
                             {% else %}
                             <div class="card-body">
                                 <h5 class="card-title">License Information</h5>
-                                <p class="card-text">asdasdasd</p>
-                                <a href="#" class="btn btn-primary">asdasdasd</a>
+                                <p class="card-text">key: {{ current_user.license}}</p>
+                                <p class="card-text">status: bound to device MacbookPro</p>
+                                <a href="#" class="btn btn-primary">Unbind from MacbookPro</a>
                             </div>
                             {%endif%}
                         </div>
