more developments on dashboard license status handling

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -63,12 +63,20 @@
                                 </div>
                             </div>
                             {% else %}
-                            <div class="card-body">
-                                <h5 class="card-title">License Information</h5>
-                                <p class="card-text">key: {{ current_user.license }}</p>
-                                <p class="card-text">status: bound to device MacbookPro</p>
-                                <a href="#" class="btn btn-primary">Unbind from MacbookPro</a>
-                            </div>
+                                {% if not current_user.license.boundtodevice %}
+                                <div class="card-body">
+                                    <h5 class="card-title">License Information</h5>
+                                    <p class="card-text">key: {{ current_user.license }}</p>
+                                    <p class="card-text">status: not currently bound</p>
+                                </div>
+                                {% else %}
+                                <div class="card-body">
+                                    <h5 class="card-title">License Information</h5>
+                                    <p class="card-text">key: {{ current_user.license }}</p>
+                                    <p class="card-text">status: bound to device MacbookPro</p>
+                                    <a href="#" class="btn btn-primary">Unbind from MacbookPro</a>
+                                </div>
+                                {%endif%}
                             {%endif%}
                         </div>
                     </div>
