started adding the edit account functions

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -93,7 +93,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Account and Billing</h5>
                                 <p class="card-text">Next Charge of $30 due on Feb 2nd</p>
-                                <a href="#" class="btn btn-primary mt-1">Edit Account/Billing Settings</a>
+                                <a href="/dashboard/account" class="btn btn-primary mt-1">Edit Account/Billing Settings</a>
                             </div>
                         </div>
                     </div>
