--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -91,11 +91,19 @@
                     </div>
                     <div class="col-sm-5">
                         <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Account and Billing</h5>
-                                <p class="card-text">Next Charge of $30 due on Feb 2nd</p>
-                                <a href="/dashboard/account" class="btn btn-primary mt-1">Edit Account/Billing Settings</a>
-                            </div>
+                            {% if not current_user.license.exists %}
+                                <div class="card-body">
+                                    <h5 class="card-title">Account and Billing</h5>
+                                    <p class="card-text">No impending charge as no license is bound.</p>
+                                    <a href="/dashboard/account" class="btn btn-primary mt-1">Edit Account/Billing Settings</a>
+                                </div>
+                            {% else %}
+                                <div class="card-body">
+                                    <h5 class="card-title">Account and Billing</h5>
+                                    <p class="card-text">Next Charge of ${{ current_user.license.renewal.renewamount }} due on {{ current_user.license.renewal.renewdate }}</p>
+                                    <a href="/dashboard/account" class="btn btn-primary mt-1">Edit Account/Billing Settings</a>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
                     <div class="col-sm-1"></div>
