--- a/templates/adminlicenses.html
+++ b/templates/adminlicenses.html
@@ -104,24 +104,56 @@
 
 
 
+
     </style>
 </head>
 
 <body class="bg-dark">
 <div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="/admin/dashboard/licenses">overview</a>
-  <a href="/admin/dashboard/users">users</a>
-  <a href="/admin/dashboard/licenses">licenses</a>
-  <a href="/admin/dashboard/plans">plans</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="/testing">overview</a>
+    <a href="#">users</a>
+    <a href="#">licenses</a>
+    <a href="#">plans</a>
     <p class="footer fixed-bottom">logged in as {{ current_user.id }}</p>
 </div>
-<div id="main" class="container-fluid h-90 bg-dark text-white">
+<div id="main" class="container-fluid h-10 bg-dark text-white">
+    <div class="col-3 text-left">
+            <div class="navbarbutton"><a href="#" onclick="openNav()"><i class="fas fa-bars"></i></a></div>
+        </div>
+</div>
+<div class="container-fluid h-80 bg-dark text-white">
     <div class="row h-90">
         <div class="col-3 text-left">
-            <div class ="navbarbutton"><a href="#" onclick="openNav()" ><i class="fas fa-bars"></i></a></div>
         </div>
-        <div class="col-md-6 text-left justify-content-center align-items-center"> ASDOIADSIODASASDOIDSAION</div>
+        <div class="col-md-6 text-left justify-content-center align-items-center">
+            <div class="card">
+                <table class="table mt-3 mb-3 px-2">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">License</th>
+                        <th scope="col">User</th>
+                        <th scope="col">Plan</th>
+                        <th scope="col">Next Renewal</th>
+                        <th scope="col">Bound to device</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for value in licenses %}
+                    <tr class="text-dark">
+                        <th scope="row ">{{ licenses.index(value) }}</th>
+                        <td>{{ value[0] }}</td>
+                        <td>@{{ value[1] }}</td>
+                        <td>{{ value[7] }}</td>
+                        <td>{{ value[6] }}</td>
+                        <td>{{ value[5] }}</td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
         <div class="col-3"></div>
     </div>
 </div>
@@ -156,5 +188,6 @@ function closeNav() {
         localStorage.setItem("sidebar", "closed");
     }
 }
+
 </script>
 </html>
